--- a/plotslistwidget.ui
+++ b/plotslistwidget.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
+    <width>250</width>
     <height>300</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>250</width>
+    <height>150</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
@@ -17,9 +23,6 @@
    <item row="0" column="0">
     <widget class="QTreeWidget" name="Plots">
      <property name="sortingEnabled">
-      <bool>true</bool>
-     </property>
-     <property name="animated">
       <bool>true</bool>
      </property>
      <property name="headerHidden">
@@ -38,14 +41,24 @@
    <item row="1" column="0">
     <layout class="QHBoxLayout" name="toolsLayout">
      <item>
-      <spacer name="horizontalSpacer">
+      <widget class="QLineEdit" name="searchEdit">
+       <property name="placeholderText">
+        <string>Search</string>
+       </property>
+       <property name="clearButtonEnabled">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="rightSpacer">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
-         <width>40</width>
-         <height>20</height>
+         <width>0</width>
+         <height>0</height>
         </size>
        </property>
       </spacer>
@@ -120,10 +133,27 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>searchEdit</sender>
+   <signal>textChanged(QString)</signal>
+   <receiver>PlotslistWidget</receiver>
+   <slot>SearchEditChanged(QString)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>87</x>
+     <y>278</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>87</x>
+     <y>552</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>TreeItemChanged(QTreeWidgetItem*)</slot>
   <slot>AddButtonClicked()</slot>
   <slot>RemoveButtonClicked()</slot>
+  <slot>SearchEditChanged(QString)</slot>
  </slots>
 </ui>
