--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -11,22 +11,34 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>K-Plots</string>
   </property>
-  <property name="documentMode">
-   <bool>true</bool>
+  <property name="windowIcon">
+   <iconset theme="utilities-system-monitor">
+    <normaloff>.</normaloff>.</iconset>
   </property>
   <property name="dockNestingEnabled">
    <bool>true</bool>
   </property>
   <widget class="QWidget" name="centralWidget"/>
-  <widget class="QToolBar" name="mainToolBar">
+  <widget class="QToolBar" name="actionsTool">
+   <property name="windowTitle">
+    <string>Tools</string>
+   </property>
+   <property name="movable">
+    <bool>false</bool>
+   </property>
+   <property name="floatable">
+    <bool>false</bool>
+   </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
    </attribute>
    <attribute name="toolBarBreak">
     <bool>false</bool>
    </attribute>
+   <addaction name="actionOpen"/>
+   <addaction name="actionSave"/>
   </widget>
   <widget class="QDockWidget" name="variablesDock">
    <property name="windowTitle">
@@ -55,15 +67,63 @@
    </attribute>
    <widget class="PlotslistWidget" name="plotslistWidget"/>
   </widget>
-  <widget class="QDockWidget" name="plotDock">
+  <widget class="QToolBar" name="supportTool">
    <property name="windowTitle">
-    <string>Plot</string>
+    <string>Support</string>
    </property>
-   <attribute name="dockWidgetArea">
-    <number>1</number>
+   <property name="layoutDirection">
+    <enum>Qt::RightToLeft</enum>
+   </property>
+   <property name="movable">
+    <bool>false</bool>
+   </property>
+   <property name="floatable">
+    <bool>false</bool>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
    </attribute>
-   <widget class="QWidget" name="plotWidget"/>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actionAbout"/>
   </widget>
+  <action name="actionOpen">
+   <property name="icon">
+    <iconset theme="document-open">
+     <normaloff>.</normaloff>.</iconset>
+   </property>
+   <property name="text">
+    <string>Open</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+O</string>
+   </property>
+  </action>
+  <action name="actionSave">
+   <property name="icon">
+    <iconset theme="document-save">
+     <normaloff>.</normaloff>.</iconset>
+   </property>
+   <property name="text">
+    <string>Save</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+S</string>
+   </property>
+  </action>
+  <action name="actionAbout">
+   <property name="icon">
+    <iconset theme="help-about">
+     <normaloff>.</normaloff>.</iconset>
+   </property>
+   <property name="text">
+    <string>About</string>
+   </property>
+   <property name="shortcut">
+    <string>F1</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
